--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -40,6 +40,12 @@
   </head>
   <body>
     <section class="section-content padding-y">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+        <a href="/" class="brand-wrap">
+          <img class="logo" src="{% static './images/logo.png' %}" />
+        </a>
+        <!-- brand-wrap.// -->
+      </div>
       <div class="card mx-auto" style="max-width: 520px; margin-top: 40px">
         <article class="card-body">
           <header class="mb-4"><h4 class="card-title">Sign up</h4></header>
