--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -41,6 +41,39 @@
   <body>
     <!-- ========================= SECTION CONTENT ========================= -->
     <section class="section-conten padding-y" style="min-height: 84vh">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+        <a href="/" class="brand-wrap">
+          <img class="logo" src="{% static './images/logo.png' %}" />
+        </a>
+        <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
+          <div class="d-flex justify-content-end mb-3 mb-lg-0">
+            <div class="widget-header">
+              <div>
+                {% if user.is_authenticated %}
+                <small class="title text-muted">Welcome {{request.user.first_name | capfirst}}</small>
+                <a href="{% url 'dashboard' %}">Dashboard</a>
+                <span class="dark-transp"> | </span>
+                <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                <small class="title text-muted">Welcome Guest</small>
+                <a href="{% url 'login' %}">Log in</a>
+                <span class="dark-transp"> | </span>
+                <a href="{% url 'register' %}"> Register</a>
+                {% endif %}
+              </div>
+            </div>
+            <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
+              <div class="icon icon-sm rounded-circle border">
+                <i class="fa fa-shopping-cart"></i>
+              </div>
+              <!-- <span class="badge badge-pill badge-danger notify">{{cart_items_count}}</span> -->
+              <span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
+            </a>
+          </div>
+          <!-- widgets-wrap.// -->
+        </div>
+        <!-- brand-wrap.// -->
+      </div>
       <!-- ============================ COMPONENT LOGIN   ================================= -->
       <div class="card mx-auto" style="max-width: 380px; margin-top: 100px">
         <div class="card-body">
