--- a/base/templates/base/cart.html
+++ b/base/templates/base/cart.html
@@ -70,6 +70,7 @@
                   <!-- price-wrap .// -->
                 </td>
                 <td class="text-right">
+                  
                   <a href="{% url 'remove_cart_item' cart_item.product.uuid cart_item.id %}" onclick="return confirm('Are you sure you want to delete this Product?')" class="btn btn-danger"> Remove</a>
                 </td>
               </tr>
@@ -101,7 +102,7 @@
             <p class="text-center mb-3">
               <img src="{% static './images/misc/payments.png' %}" height="26" />
             </p>
-            <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+            <a href="{% url 'place_order' %}" class="btn btn-primary btn-block"> Place Order </a>
             <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
           </div>
           <!-- card-body.// -->
