--- a/base/templates/base/product-detail.html
+++ b/base/templates/base/product-detail.html
@@ -15,6 +15,8 @@
           <!-- gallery-wrap .end// -->
         </aside>
         <main class="col-md-6 border-left">
+     
+             
           <form action="{% url 'add_cart' single_product.uuid %}" method="POST">
             {% csrf_token %}
             <article class="content-body">
@@ -59,14 +61,13 @@
               <p class="text-success">Only {{ single_product.stock }} stock left. Order Soon</p>
               <button class="btn btn-primary" type="submit"><span class="text">Add to cart</span><i class="fas fa-shopping-cart"></i></button>
               {% endif %}
-              <!-- <p class="text-success">Only {{ single_product.stock }} stock left. Order Soon</p>
-              <button class="btn btn-primary" type="submit"><span class="text">Add to cart</span><i class="fas fa-shopping-cart"></i></button> -->
+              
 
               {% else %}
               <hr />
               {% if is_out_of_stock %}
               <h5 class="text-danger">Out of Stock</h5>
-              <!-- Display the out-of-stock message -->
+
               {% else %} {% if in_cart %}
               <a href="#" class="btn btn-success"><span class="text">Added to cart</span><i class="fas fa-check"></i></a>
               <a href="{% url 'cart' %}" class="btn btn-outline-primary"><span class="text">View Cart</span><i class="fas fa-eye"></i></a>
@@ -78,7 +79,70 @@
               {% endif %} {% endif %} {% endif %}
             </article>
           </form>
-          <!-- product-info-aside .// -->
+         
+
+          <!-- <form action="{% url 'login' %}}" method="POST">
+            {% csrf_token %}
+            <article class="content-body">
+              <h2 class="title">{{single_product.product_name}}</h2>
+
+              <div class="mb-3">
+                <var class="price h4">&#8358;{{single_product.price}}</var>
+              </div>
+
+              <p>{{single_product.description}}</p>
+
+              <hr />
+              {% if variation %}
+              <div class="row">
+                <div class="item-option-select">
+                  <h6>Choose Color</h6>
+                  <select class="form-control" name="color" required>
+                    <option value="" disabled selected>Select</option>
+                    {% for i in single_product.variation_set.colors %}
+                    <option value="{{ i.variation_value | lower  }}">{{ i.variation_value | capfirst }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="item-option-select">
+                  <h6>Select Size</h6>
+                  <select class="form-control" name="size" id="size" required>
+                    <option value="" disabled selected>Select</option>
+                    {% for i in single_product.variation_set.sizes %}
+                    <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+              {% if in_cart %}
+              <a href="#" class="btn btn-success"><span class="text">Added to cart</span><i class="fas fa-check"></i></a>
+              <a href="{% url 'login' %}" class="btn btn-outline-primary"><span class="text">View Cart</span><i class="fas fa-eye"></i></a>
+              <button class="btn btn-primary" type="submit"><span class="text">Add to cart again</span><i class="fas fa-shopping-cart"></i></button>
+              {% else %}
+
+              <p class="text-success">Only {{ single_product.stock }} stock left. Order Soon</p>
+              <button class="btn btn-primary" type="submit"><span class="text">Add to cart</span><i class="fas fa-shopping-cart"></i></button>
+              {% endif %}
+              
+              {% else %}
+              <hr />
+              {% if is_out_of_stock %}
+              <h5 class="text-danger">Out of Stock</h5>
+           
+              {% else %} {% if in_cart %}
+              <a href="#" class="btn btn-success"><span class="text">Added to cart</span><i class="fas fa-check"></i></a>
+              <a href="{% url 'login' %}" class="btn btn-outline-primary"><span class="text">View Cart</span><i class="fas fa-eye"></i></a>
+              <button class="btn btn-primary" type="submit"><span class="text">Add to cart again</span><i class="fas fa-shopping-cart"></i></button>
+              {% else %}
+
+              <p class="text-success">Only {{ single_product.stock }} stock left. Order Soon</p>
+              <button class="btn btn-primary" type="submit"><span class="text">Add to cart</span><i class="fas fa-shopping-cart"></i></button>
+              {% endif %} {% endif %} {% endif %}
+            </article>
+          </form> -->
+
         </main>
         <!-- col.// -->
       </div>
