--- a/base/templates/base/order_complete.html
+++ b/base/templates/base/order_complete.html
@@ -1,3 +1,4 @@
+{% extends 'base/base.html' %} {% load static %} {% block content %}
 
 <div class="container" style="margin-top: 50px;">
     <center><i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
@@ -107,3 +108,5 @@
         <!-- col-lg-12 end here -->
     </div>
     </div>
+
+    {% endblock %}
