--- a/accounts/templates/accounts/account_activation_email.html
+++ b/accounts/templates/accounts/account_activation_email.html
@@ -14,5 +14,5 @@ Please click the link below to activate your account:
 If you did not register on our site, please ignore this message.
 
 Best regards,
-Your Website Team
+Akalibe
 {% endautoescape %}
