--- a/accounts/templates/accounts/forgotPasswordEmail.html
+++ b/accounts/templates/accounts/forgotPasswordEmail.html
@@ -15,5 +15,5 @@ http://{{ domain }}{% url 'forgotPassword_validate' uidb64=uid token=token %}
 If you did not register on our site, please ignore this message.
 
 Best regards,
-Your Website Team
+Akalibe
 {% endautoescape %}
