--- a/base/templates/base/checkout.html
+++ b/base/templates/base/checkout.html
@@ -30,9 +30,13 @@
                         </div>
                         <figcaption class="info">
                           <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-                          <p class="text-muted small">{% if cart_item.variations.all %}{% for item in cart_item.variations.all %}</p>
-                          <p>{{ item.variation_category | capfirst }} : {{item.variation_value | capfirst }}</p>
-                          {% endfor %} {% endif %}
+                          <p class="text-muted small">
+                            {% if cart_item.variations.all %}
+                              {% for item in cart_item.variations.all %}
+                                {{ item.variation_category | capfirst }} : {{item.variation_value | capfirst }} <br>
+                                {% endfor %}
+                            {% endif %}
+                          </p>
                         </figcaption>
                       </figure>
                     </td>
