--- a/base/templates/base/payment_success.html
+++ b/base/templates/base/payment_success.html
@@ -1,12 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Successful</title>
-</head>
-<body>
-    <h1>Payment Successful</h1>
-    <p>Thank you for your purchase!</p>
-</body>
-</html>
+{% extends 'base/base.html' %} {% load static %} {% block content %}
+
+<div class="container" style="margin-top: 50px;">
+    <div>
+        <i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i>
+    </div>
+    <h2 class="text-center">Payment Successful</h2>
+	<br>
+	<div class="text-center">
+		<a href="{% url 'store' %}" class="btn btn-success">Shop more</a>
+	</div>
+</div>
+
+<div class="container" style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
+    <div class="row invoice row-printable">
+        <div class="col-md-12">
+            <!-- col-lg-12 start here -->
+            <div class="panel panel-default plain" id="dash_0">
+                <!-- Start .panel -->
+                <div class="panel-body p30">
+                    <div class="row">
+                        <!-- Start .row -->
+                        <div class="col-lg-6">
+                            <!-- col-lg-6 start here -->
+                            <div class="invoice-logo">
+                                <img class="logo" src="{% static './images/logo.png' %}" alt="Invoice logo" style="max-height: 40px;" />
+
+                            </div>
+                        </div>
+                        <!-- col-lg-6 end here -->
+                        <div class="col-lg-6">
+                            <!-- col-lg-6 start here -->
+                            <div class="invoice-from">
+                                <ul class="list-unstyled text-right">
+                                    <li><strong>Invoiced To</strong>  </li>
+                                    <li>{{ payment.full_name }}</li>
+                                    <li>{{ payment.address }}</li>
+                                    <li>{{ payment.city }}, {{ payment.state }}</li>
+                                    <li>{{ payment.country }}</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- col-lg-6 end here -->
+                        <div class="col-lg-12">
+                            <!-- col-lg-12 start here -->
+                            <div class="invoice-details mt25">
+                                <div class="well">
+                                    <ul class="list-unstyled mb0">
+                                        <li><strong>Order Number:</strong> {{ order.order_number }} </li>
+                                        <li><strong>Payment ID:</strong> {{ payment.payment_id }} </li>
+                                        <li><strong>Order Date:</strong> {{ order.created_at }} </li>
+                                        <li><strong>Status:</strong> {{ payment.status | capfirst }} </li>
+                                    </ul>
+                                </div>
+                            </div>
+                           
+                            <div class="invoice-items">
+                                <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="0">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th class="per70 text-center">Products</th>
+                                                <th class="per5 text-center">Qty</th>
+                                                <th class="per25 text-center">Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for item in order_products %}
+                                            <tr>
+                                                <td>{{ item.product.product_name }}
+                                                    <p class="text-muted small">
+                                                        {% if item.variations.all %}
+                                                          {% for i in item.variations.all %}
+                                                            {{ i.variation_category | capfirst }} : {{i.variation_value | capfirst }} <br>
+                                                            {% endfor %}
+                                                        {% endif %}
+                                                      </p>
+                                                </td>
+                                                <td class="text-center">{{ item.quantity }}</td>
+                                                <td class="text-center">&#8358;{{ item.product_price }}</td>
+                                            </tr>
+                                            {% endfor %}
+                                           
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th colspan="2" class="text-right">Sub Total:</th>
+                                                <th class="text-center">&#8358;{{ subtotal }} NGN</th>
+                                            </tr>
+                                            <tr>
+                                                <th colspan="2" class="text-right">Tax:</th>
+                                                <th class="text-center">&#8358;{{ order.tax }} NGN</th>
+                                            </tr>
+                                            
+                                            <tr>
+                                                <th colspan="2" class="text-right">Grand Total:</th>
+                                                <th class="text-center">&#8358;{{ grand_total }} NGN</th>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="invoice-footer mt25">
+                                <p class="text-center">Thank you for shopping with us!</p>
+                            </div>
+                        </div>
+                        <!-- col-lg-12 end here -->
+                    </div>
+                    <!-- End .row -->
+                </div>
+            </div>
+            <!-- End .panel -->
+        </div>
+        <!-- col-lg-12 end here -->
+    </div>
+    </div>
+
+{% endblock %}
