--- a/base/templates/base/payment_failed.html
+++ b/base/templates/base/payment_failed.html
@@ -1,13 +1,19 @@
 {% extends 'base/base.html' %} {% load static %} {% block content %}
-<section class="section-name padding-y-sm">
-  <div class="container">
-    <header class="section-heading">
-      <h3 class="section-title align-items-center justify-content-center d-flex">Payment Failed</h3>
-      <p>Your payment was not completed. Please try again.</p>
-    </header>
-    <div class="row">
+
+<div class="container mx-auto" style="margin-top: 50px;">
+    <div class="mx-auto d-flex">
+        <i class="fas fa-times-circle mx-auto" style="margin: 0 auto;font-size: 72px;margin-bottom: 20px;color: #ff0000;"></i>
     </div>
-  </div>
-</section>
+    <h2 class="text-center">Payment Failed</h2>
+    <p class="text-center">Please wait for 30mins before trying again</p>
+	<br>
+	<div class="text-center">
+		<a href="{% url 'store' %}" class="btn btn-danger">Shop more</a>
+	</div>
+</div>
+
+<div class="container" style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
+    
+    </div>
 
 {% endblock %}
